# sudoku-solver-gui

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  tailwind.config.js
assets/: main.css
src/: board.rs  controls.rs  main.rs  message.rs  numberInput.rs  popover.rs  tile.rs
src/sudoku/: cell.rs  mod.rs  point.rs  sudoku.rs  sudoku_errors.rs  sudoku_solver.rs
