[package]
name = "sudoku-solver"
version = "0.1.0"
authors = ["Siema3554 <benjamin.jurewicz204@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Debug
dioxus-logger = "0.6.2"
dioxus = { version = "0.6.2" }
log = "0.4.25"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
